--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="swipe_refresh_layout" type="id" />
+    <item name="drag_view" type="id" />
+    <item name="second_view" type="id" />
 </resources>
