--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,4 +17,19 @@
     <declare-styleable name="AspectRatioView">
         <attr name="aspectRatio" format="float" />
     </declare-styleable>
+
+    <declare-styleable name="draggable_view">
+        <attr name="top_view_id" format="reference" />
+        <attr name="bottom_view_id" format="reference" />
+        <attr name="top_view_height" format="dimension" />
+        <attr name="top_view_x_scale_factor" format="float" />
+        <attr name="top_view_y_scale_factor" format="float" />
+        <attr name="top_view_margin_right" format="dimension" />
+        <attr name="top_view_margin_bottom" format="dimension" />
+        <attr name="enable_minimized_horizontal_alpha_effect" format="boolean" />
+        <attr name="enable_click_to_maximize_view" format="boolean" />
+        <attr name="enable_click_to_minimize_view" format="boolean" />
+        <attr name="top_view_resize" format="boolean" />
+    </declare-styleable>
+
 </resources>
