--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -4,7 +4,6 @@
     android:id="@+id/draggable_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/theme_accent_1"
     app:bottom_view_id="@+id/iv_thumbnail"
     app:enable_minimized_horizontal_alpha_effect="false"
     app:top_view_height="200dp"
@@ -15,12 +14,14 @@
     app:top_view_x_scale_factor="2.3"
     app:top_view_y_scale_factor="2.3">
 
-    <ImageView
+    <TextView
         android:id="@+id/iv_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/dragView"
-        android:focusable="true" />
+        android:layout_below="@+id/player_view"
+        android:background="@android:color/white"
+        android:focusable="true"
+        android:text="是复赛地方哈斯的粉红色的i飞洒\n地方很死的速度放缓i\n撒地方很阿斯顿因为人请问驱蚊器华威桥" />
 
     <com.yalin.freevideo.ui.widget.player.ExoPlayerView
         android:id="@id/player_view"
