--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -19,17 +19,17 @@
     </declare-styleable>
 
     <declare-styleable name="draggable_view">
-        <attr name="top_view_id" format="reference" />
-        <attr name="bottom_view_id" format="reference" />
-        <attr name="top_view_height" format="dimension" />
-        <attr name="top_view_x_scale_factor" format="float" />
-        <attr name="top_view_y_scale_factor" format="float" />
-        <attr name="top_view_margin_right" format="dimension" />
-        <attr name="top_view_margin_bottom" format="dimension" />
-        <attr name="enable_minimized_horizontal_alpha_effect" format="boolean" />
-        <attr name="enable_click_to_maximize_view" format="boolean" />
-        <attr name="enable_click_to_minimize_view" format="boolean" />
-        <attr name="top_view_resize" format="boolean" />
+        <attr name="topViewId" format="reference" />
+        <attr name="bottomViewId" format="reference" />
+        <attr name="topViewHeight" format="dimension" />
+        <attr name="topViewXScaleFactor" format="float" />
+        <attr name="topViewYScaleFactor" format="float" />
+        <attr name="topViewMarginRight" format="dimension" />
+        <attr name="topViewMarginBottom" format="dimension" />
+        <attr name="enableMinimizedHorizontalAlphaEffect" format="boolean" />
+        <attr name="enableClickToMaximizeView" format="boolean" />
+        <attr name="enableClickToMinimizeView" format="boolean" />
+        <attr name="topViewResize" format="boolean" />
     </declare-styleable>
 
 </resources>
