--- a/app/src/main/res/layout/fragment_video_explore.xml
+++ b/app/src/main/res/layout/fragment_video_explore.xml
@@ -2,14 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/light_grey"
+        android:fitsSystemWindows="true"
         android:scaleType="centerInside"
         android:visibility="gone"
         app:srcCompat="@drawable/io_logo" />
